Fix problem with pseudo element sizing on mobile.

--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ body {
   content: "";
   position: absolute;
   top: 0; left: 0;
-  width: 100%; height: 100%;
+  width: 5vw; height: 5vw;
   border-radius: 4vw;
   background-color: rgba(112, 128, 144, 0);
   mix-blend-mode: screen;
